# hakyll-site-and-blog

./: .gitignore  blog.html  fraserbrooksio.cabal  index.html  my-site.cabal  open-source-jrnl.html  site.hs
CV/: cv.tex
_site/: about.html  archive.html  blog.html  contact.html  index.html  open-source-jrnl.html
_site/blog/: 2021-07-21-programming-language-semantics-via-hoare-logic.html  2021-10-01-this-is-a-test-blog-post-of-no-importance.html  2021-10-09-making-a-responsive-portfolio-blog-site-with-the-haskell-static-site-generator-hakyll.html
_site/css/: _navbar.css  _responsive.css  index.css  listicle.css  main.css  navbar-r.css  post-r.css  post.css  root.css
_site/js/: index.js
_site/posts/: 2015-08-12-spqr.html  2015-10-07-rosa-rosa-rosam.html  2015-11-28-carpe-diem.html  2015-12-07-tu-quoque.html
app/: BasicParsers.hs  Parsing.hs  SiteData.hs  SiteDataParsers.hs  SiteParser.hs
content/: about-me.txt  contact-me.txt  open-source-journal.txt  posts-index.txt
content/academic-work/: 01-thesis.txt  02-robotics-proj.txt  03-undergraduate-hott.txt
content/cv/: cv.tex
content/project-portfolio/: 01-dragon.txt  01-thesis.txt  01-ticklight-app.txt  02-dragon.txt  02-robotics-proj.txt  03-dodo-go.txt
js/: index.js  main.js
scss/: _listicle-r.scss  _main-styles-r.scss  _main-styles.scss  _navbar.scss  _responsive.scss  _root-r.scss  index.scss  listicle.scss  main.scss  post-r.scss  post.scss  root.scss
scss/auxilary/: _config.scss  _mobile.scss  _navbar.scss
scss/index/: index.scss  (+4 more)
templates/: default.html  mathjax.html  post.html  root.html
(+54 files in other folders)
